# examen-2024

art-stealer/: README.md
chatbot/: README.md
cryptographie/: README.md
ctf-web-attack/: README.md
cumul/: README.md
database/: README.md
debug/: Makefile  debug.md
debug/src/: branch.cpp  branch.hpp  grower.cpp  grower.hpp  lumberjack.cpp  lumberjack.hpp  main.cpp  registry.cpp  registry.hpp  swing.cpp  swing.hpp  tree.cpp  tree.hpp  visitor.hpp
devops/: README.md
extreme/: README.md  main.c
game/: README.md
hpc/: Cargo.toml  README.md
hpc/benches/: bench.rs  question1.rs  question2.rs  question3.rs  question4.rs
hpc/src/: lib.rs
hpc/src/questions/: mod.rs
hpc/src/questions/question1/: mod.rs  tests.rs
hpc/src/questions/question2/: mod.rs  tests.rs
hpc/src/questions/question3/: mod.rs  tests.rs
hpc/src/questions/question4/: mod.rs  shader.wgsl  tests.rs
hpc/src/setup/: gpu_setup.rs  mod.rs
os/: README.md  balance.c
solver/: blackbox.py  readme.md  solver.py  solver_test.py
team-software/: README.md
uno/: README.md
