[package]
name = "hpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.14.1"
flume = "0.11.0"
pollster = "0.3.0"
rand = "0.8.5"
rayon = "1.8.1"
wgpu = { version = "0.19.1", features = ["vulkan-portability"] }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
